fix: adjust tab inset on small modal

--- a/packages/components/src/Modal/Sizes.css
+++ b/packages/components/src/Modal/Sizes.css
@@ -1,5 +1,6 @@
 .small {
   --modal--padding: var(--space-base);
+  --public-tab--inset: var(--space-base);
   max-width: calc(var(--base-unit) * 25);
 }
 
